Add test assertion to ensure we can upload pdfs without acroforms
[finishes #179139202]